post build steps

--- a/mw-plugin/src/main/resources/org/jenkinsci/plugins/mwjpi/Messages.properties
+++ b/mw-plugin/src/main/resources/org/jenkinsci/plugins/mwjpi/Messages.properties
@@ -1,9 +1,16 @@
-# MwJpiBuilder
-MwJpiBuilder.DescriptorImpl.errors.missingName=Please set a name
-MwJpiBuilder.DescriptorImpl.warnings.tooShort=Isn't the name too short?
-MwJpiBuilder.DescriptorImpl.warnings.reallyFrench=Are you actually French?
+# BuildSteps
+BuildSteps.DescriptorImpl.errors.missingName=Please set a name
+BuildSteps.DescriptorImpl.warnings.tooShort=Isn't the name too short?
+BuildSteps.DescriptorImpl.warnings.reallyFrench=Are you actually French?
 
-MwJpiBuilder.DescriptorImpl.DisplayName=Greeting
+BuildSteps.DescriptorImpl.DisplayName=Greeting
+
+# PostBuildSteps
+PostBuildSteps.DescriptorImpl.errors.missingName=Please set a name
+PostBuildSteps.DescriptorImpl.warnings.tooShort=Isn't the name too short?
+PostBuildSteps.DescriptorImpl.warnings.reallyFrench=Are you actually French?
+
+PostBuildSteps.DescriptorImpl.DisplayName=Post Build Greeting
 
 # SleepBuilder
 SleepBuilder.DescriptorImpl.DisplayName=Sleep builder
