--- a/mw-plugin/src/main/resources/org/jenkinsci/plugins/mwjpi/Messages_de.properties
+++ b/mw-plugin/src/main/resources/org/jenkinsci/plugins/mwjpi/Messages_de.properties
@@ -1,5 +1,11 @@
-MwJpiBuilder.DescriptorImpl.errors.missingName=Bitte geben Sie einen Namen an
-MwJpiBuilder.DescriptorImpl.warnings.tooShort=Der Name ist zu kurz.
-MwJpiBuilder.DescriptorImpl.warnings.reallyFrench=Sind Sie wirklich franz\u00F6sisch?
+BuildSteps.DescriptorImpl.errors.missingName=Bitte geben Sie einen Namen an
+BuildSteps.DescriptorImpl.warnings.tooShort=Der Name ist zu kurz.
+BuildSteps.DescriptorImpl.warnings.reallyFrench=Sind Sie wirklich franz\u00F6sisch?
 
-MwJpiBuilder.DescriptorImpl.DisplayName=\u201EHallo Welt\u201C sagen
+BuildSteps.DescriptorImpl.DisplayName=\u201EHallo Welt\u201C sagen
+
+PostBuildSteps.DescriptorImpl.errors.missingName=Bitte geben Sie einen Namen an
+PostBuildSteps.DescriptorImpl.warnings.tooShort=Der Name ist zu kurz.
+PostBuildSteps.DescriptorImpl.warnings.reallyFrench=Sind Sie wirklich franz\u00F6sisch?
+
+PostBuildSteps.DescriptorImpl.DisplayName=\u201EHallo Welt\u201C sagen
