--- a/mw-plugin/src/main/resources/org/jenkinsci/plugins/mwjpi/Messages_es.properties
+++ b/mw-plugin/src/main/resources/org/jenkinsci/plugins/mwjpi/Messages_es.properties
@@ -1,5 +1,11 @@
-MwJpiBuilder.DescriptorImpl.errors.missingName=Establecer un nombre
-MwJpiBuilder.DescriptorImpl.warnings.tooShort=\u00BFNo es el nombre demasiado corto?
-MwJpiBuilder.DescriptorImpl.warnings.reallyFrench=\u00BFEs usted realmente franc\u00E9s?
+BuildSteps.DescriptorImpl.errors.missingName=Establecer un nombre
+BuildSteps.DescriptorImpl.warnings.tooShort=\u00BFNo es el nombre demasiado corto?
+BuildSteps.DescriptorImpl.warnings.reallyFrench=\u00BFEs usted realmente franc\u00E9s?
 
-MwJpiBuilder.DescriptorImpl.DisplayName=Di hola mundo
+BuildSteps.DescriptorImpl.DisplayName=Di hola mundo
+
+PostBuildSteps.DescriptorImpl.errors.missingName=Establecer un nombre
+PostBuildSteps.DescriptorImpl.warnings.tooShort=\u00BFNo es el nombre demasiado corto?
+PostBuildSteps.DescriptorImpl.warnings.reallyFrench=\u00BFEs usted realmente franc\u00E9s?
+
+PostBuildSteps.DescriptorImpl.DisplayName=Di hola mundo
