--- a/mw-plugin/src/main/resources/org/jenkinsci/plugins/mwjpi/Messages_sv.properties
+++ b/mw-plugin/src/main/resources/org/jenkinsci/plugins/mwjpi/Messages_sv.properties
@@ -1,5 +1,11 @@
-MwJpiBuilder.DescriptorImpl.errors.missingName=Ange ett namn
-MwJpiBuilder.DescriptorImpl.warnings.tooShort=\u00C4r inte namnet lite f\u00F6r kort?
-MwJpiBuilder.DescriptorImpl.warnings.reallyFrench=\u00C4r du egentligen Fransk?
+BuildSteps.DescriptorImpl.errors.missingName=Ange ett namn
+BuildSteps.DescriptorImpl.warnings.tooShort=\u00C4r inte namnet lite f\u00F6r kort?
+BuildSteps.DescriptorImpl.warnings.reallyFrench=\u00C4r du egentligen Fransk?
 
-MwJpiBuilder.DescriptorImpl.DisplayName=S\u00E4g Hej V\u00E4rlden
+BuildSteps.DescriptorImpl.DisplayName=S\u00E4g Hej V\u00E4rlden
+
+PostBuildSteps.DescriptorImpl.errors.missingName=Ange ett namn
+PostBuildSteps.DescriptorImpl.warnings.tooShort=\u00C4r inte namnet lite f\u00F6r kort?
+PostBuildSteps.DescriptorImpl.warnings.reallyFrench=\u00C4r du egentligen Fransk?
+
+PostBuildSteps.DescriptorImpl.DisplayName=S\u00E4g Hej V\u00E4rlden
