--- a/mw-plugin/src/main/resources/org/jenkinsci/plugins/mwjpi/Messages_fr.properties
+++ b/mw-plugin/src/main/resources/org/jenkinsci/plugins/mwjpi/Messages_fr.properties
@@ -1,5 +1,11 @@
-MwJpiBuilder.DescriptorImpl.errors.missingName=Veuillez saisir un nom
-MwJpiBuilder.DescriptorImpl.warnings.tooShort=Le nom n'est-il pas trop court ?
-MwJpiBuilder.DescriptorImpl.warnings.reallyFrench=\u00CAtes vous vraiment fran\u00E7ais ?
+BuildSteps.DescriptorImpl.errors.missingName=Veuillez saisir un nom
+BuildSteps.DescriptorImpl.warnings.tooShort=Le nom n'est-il pas trop court ?
+BuildSteps.DescriptorImpl.warnings.reallyFrench=\u00CAtes vous vraiment fran\u00E7ais ?
 
-MwJpiBuilder.DescriptorImpl.DisplayName=Dis hello world
+BuildSteps.DescriptorImpl.DisplayName=Dis hello world
+
+PostBuildSteps.DescriptorImpl.errors.missingName=Veuillez saisir un nom
+PostBuildSteps.DescriptorImpl.warnings.tooShort=Le nom n'est-il pas trop court ?
+PostBuildSteps.DescriptorImpl.warnings.reallyFrench=\u00CAtes vous vraiment fran\u00E7ais ?
+
+PostBuildSteps.DescriptorImpl.DisplayName=Dis hello world
