--- a/mw-plugin/src/main/resources/org/jenkinsci/plugins/mwjpi/Messages_it.properties
+++ b/mw-plugin/src/main/resources/org/jenkinsci/plugins/mwjpi/Messages_it.properties
@@ -1,5 +1,11 @@
-MwJpiBuilder.DescriptorImpl.errors.missingName=Nome \u00E8 richiesto
-MwJpiBuilder.DescriptorImpl.warnings.tooShort=Nome dev'essere al meno 4 charatteri
-MwJpiBuilder.DescriptorImpl.warnings.reallyFrench=Vuole mostrare il messagio in francese?
+BuildSteps.DescriptorImpl.errors.missingName=Nome \u00E8 richiesto
+BuildSteps.DescriptorImpl.warnings.tooShort=Nome dev'essere al meno 4 charatteri
+BuildSteps.DescriptorImpl.warnings.reallyFrench=Vuole mostrare il messagio in francese?
 
-MwJpiBuilder.DescriptorImpl.DisplayName=Nome di mostrare
+BuildSteps.DescriptorImpl.DisplayName=Nome di mostrare
+
+PostBuildSteps.DescriptorImpl.errors.missingName=Nome \u00E8 richiesto
+PostBuildSteps.DescriptorImpl.warnings.tooShort=Nome dev'essere al meno 4 charatteri
+PostBuildSteps.DescriptorImpl.warnings.reallyFrench=Vuole mostrare il messagio in francese?
+
+PostBuildSteps.DescriptorImpl.DisplayName=Nome di mostrare
