--- a/mw-plugin/src/main/resources/org/jenkinsci/plugins/mwjpi/Messages_tr.properties
+++ b/mw-plugin/src/main/resources/org/jenkinsci/plugins/mwjpi/Messages_tr.properties
@@ -1,5 +1,11 @@
-MwJpiBuilder.DescriptorImpl.errors.missingName=L\u00FCtfen bir isim girin
-MwJpiBuilder.DescriptorImpl.warnings.tooShort=\u0130sminiz \u00E7ok k\u0131sa de\u011Fil mi?
-MwJpiBuilder.DescriptorImpl.warnings.reallyFrench=Ger\u00E7ekten Frans\u0131z m\u0131s\u0131n\u0131z?
+BuildSteps.DescriptorImpl.errors.missingName=L\u00FCtfen bir isim girin
+BuildSteps.DescriptorImpl.warnings.tooShort=\u0130sminiz \u00E7ok k\u0131sa de\u011Fil mi?
+BuildSteps.DescriptorImpl.warnings.reallyFrench=Ger\u00E7ekten Frans\u0131z m\u0131s\u0131n\u0131z?
 
-MwJpiBuilder.DescriptorImpl.DisplayName=Merhaba d\u00FCnya de
+BuildSteps.DescriptorImpl.DisplayName=Merhaba d\u00FCnya de
+
+PostBuildSteps.DescriptorImpl.errors.missingName=L\u00FCtfen bir isim girin
+PostBuildSteps.DescriptorImpl.warnings.tooShort=\u0130sminiz \u00E7ok k\u0131sa de\u011Fil mi?
+PostBuildSteps.DescriptorImpl.warnings.reallyFrench=Ger\u00E7ekten Frans\u0131z m\u0131s\u0131n\u0131z?
+
+PostBuildSteps.DescriptorImpl.DisplayName=Merhaba d\u00FCnya de
