style="width:400px"

--- a/mw-plugin/src/main/resources/org/jenkinsci/plugins/mwjpi/Messages.properties
+++ b/mw-plugin/src/main/resources/org/jenkinsci/plugins/mwjpi/Messages.properties
@@ -14,6 +14,7 @@ PostBuildSteps.DescriptorImpl.DisplayName=Post Build Greeting
 
 # SleepBuilder
 SleepBuilder.DescriptorImpl.DisplayName=Sleep builder
+SleepBuilder2.DescriptorImpl.DisplayName=Sleep builder 2
 
 SleepBuilder.DescriptorImpl.errors.enterNumber=Please enter a number
 SleepBuilder.DescriptorImpl.errors.positiveNumber=Please enter a positive number
