passing env variables from upstream to downstream

--- a/mw-plugin/src/main/resources/org/jenkinsci/plugins/mwjpi/Messages.properties
+++ b/mw-plugin/src/main/resources/org/jenkinsci/plugins/mwjpi/Messages.properties
@@ -10,7 +10,14 @@ PostBuildSteps.DescriptorImpl.errors.missingName=Please set a name
 PostBuildSteps.DescriptorImpl.warnings.tooShort=Isn't the name too short?
 PostBuildSteps.DescriptorImpl.warnings.reallyFrench=Are you actually French?
 
-PostBuildSteps.DescriptorImpl.DisplayName=Post Build Greeting
+PostBuildSteps.DescriptorImpl.DisplayName=Post Build Steps
+
+# PostBuildAction
+PostBuildAction.DescriptorImpl.errors.missingName=Please set a name
+PostBuildAction.DescriptorImpl.warnings.tooShort=Isn't the name too short?
+PostBuildAction.DescriptorImpl.warnings.reallyFrench=Are you actually French?
+
+PostBuildAction.DescriptorImpl.DisplayName=Post Build Action
 
 # SleepBuilder
 SleepBuilder.DescriptorImpl.DisplayName=Sleep builder
